update trainer logic
